[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games is a set of logic games. The set includes such games as: even numbers, calculator, greatest common divisor, progression, prime numbers"
authors = ["Dmitry Vdovin <dm3vdovin@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/dm3vdovin/python-project-49"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
